--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.5",
     "@material-tailwind/react": "^1.2.3",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,17 +15,19 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prelint": "prettier --write 'src/*.{ts,tsx}'",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
+    "prelint": "prettier --write 'src/**/*.{ts,tsx}'",
     "lint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'"
   },
   "eslintConfig": {
@@ -60,6 +64,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "react-app-rewire-alias": "^1.1.7",
     "tailwindcss": "^3.1.8"
   }
 }
